assets/css/main.scss
---
---

@import "reset";
@import "config";

body {
	min-height: 600px;
	width: 100%;
	margin-left: calc(50vw - (100% / 2));
	overflow-x: hidden;
	color: $color-white;
	background: #1C1C1C;
	font-family: 'Inconsolata', ;
	font-size: 100%;
	font-weight: 400;
	position: relative;
}

h1 {
	margin-bottom: 5px;
}
p {
	font-size: 1em;
	line-height: 150%;
}

table {
	border-collapse: collapse;
    border: 2px solid $color-white;
    
}

th{
	background-color: $color-grey;
	vertical-align: middle;
	font-weight: bold;
    border: 1px solid $color-white;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 4px;
    padding-bottom: 4px;
}

tr:nth-child(even) {
    background-color: $color-black;
}

td {
	
	vertical-align: middle;
    border: 1px solid $color-white;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 4px;
    padding-bottom: 4px;
}

blockquote {
  border-left: 5px solid $color-grey;
  margin: 1.5em 20px;
  padding: 0.5em 10px;
}

.license{
 	position: absolute;
	bottom: 0;
	width: 700px;
	text-align: center;
	font-size: 12px;
}

.header img {
  width: 100px;
  height: 100px;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  transition: all 0.5s ease;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
}

.header img:hover {
  -webkit-filter: grayscale(0%);
  filter: grayscale(0%);
}

.header a {
	text-decoration: none;
}

.header ul a, .blog ul a, #post a, .about a, .post__back {
  color: $color-link;
  text-decoration: none;
  &:visited {
	color: $color-link;
	text-decoration: none;
  }
  &:hover {
	color: $color-link;
	text-decoration: none;
	padding-bottom: 1px;
	border-bottom: 1px solid $color-link;
  }
  &:active {
	color: $color-link;
	text-decoration: none;
  }
}
ul {
	list-style: none;
	li {
		padding: 5px;
		padding-left: 10px;
		@media screen and (max-width: $br) {
			padding: 10px 0 10px 0;
		}
	}
}

img {
	width: 100%;
}

.wrapper {
	max-width: 700px;
	margin: auto;
	padding: 25px 30px 60px 30px;
	@media screen and (max-width: $br) {
		padding: 20px;
	}
}


.header {
	text-align: center;
	justify-content: space-between;
	padding-bottom: 5px;
	@media screen and (max-width: $br) {
		display: block;
	}
	h1 {
		font-size: 2em;
		margin-bottom: 0px;
	}
	ul {
		margin-top: 10px;
		li {
			display: inline;
			padding: 0;
			padding-left: 5px;

		}
	}
}

.portfolio {
	padding-bottom: 30px;
	h1 {
		font-size: 1.4em;
		margin-bottom: 5px;
	}
}

.blog {
	padding-top: 20px;
	padding-bottom: 30px;
	h1 {
		font-size: 1.4em;
		margin-bottom: 5px;
	}
}

.music {
	padding-bottom: 30px;
	h1 {
		font-size: 1.4em;
		margin-bottom: 5px;
	}
	a {
		padding: 5px;
		padding-left: 10px;
	}
}

#post {
	padding-bottom: 30px;
	&__back {
		a {
			
		}
	}
	&__title {
		display: block;
		margin-top: 20px;
		margin-bottom: 6px;
		h1 {
			display: inline-block;
			font-size: 1.6em;
			font-weight: 700;
			padding-right: 10px;
			padding-bottom: 2px;
			text-decoration: none;
			border-bottom: 2px solid $color-white;
		}
	}
	&__date {
		p {
			font-size: 1em;
			font-style: italic;
		}
	}
	&__meta {
		p {

		}
	}
	&__content {
		padding-top: 40px;
		h1 {
			font-size: 1.4em;
			font-weight: 700;
			margin-top: 50px;
			margin-bottom: 10px;
		}
		h2 {
			font-size: 1.1em;
			font-weight: 700;
			margin-top: 25px;
			margin-bottom: 5px;
		}
		p {
			font-size: 1em;
			line-height: 150%;
			margin-bottom: 15px;
		}
		a {
			padding-bottom: 1px;
			border-bottom: 1px solid $color-link;
			&:hover {
				background-color: $color-grey;
				text-decoration: none;
			}
		}
		strong {
			font-weight: 700;
		}
		em {
			font-style: italic;
		}
		ul {
			font-size: 1em;
			list-style: circle;
			margin-left: 30px;
			margin-top: -10px;
			margin-bottom: 15px;
			li {
				padding: 5px;
				padding-left: 5px;
				@media screen and (max-width: $br) {
					padding: 10px 0 10px 0;
				}
			}
			@media screen and (max-width: $br) {
				margin-left: 10px;
			}
		}
		img {
			margin-top: 10px;
			margin-bottom: 10px;
			@media screen and (max-width: $br) {
				width: 100%;
				margin: auto;
			}
		}
		code {
			padding: 3px;
			font-size: 0.9em;
			border-radius: 3px;
			background: $color-grey;
		}
		.highlight {
			margin: 10px;
			margin-bottom: 15px;
			padding: 10px;
			line-height: 1.5;
			border-radius: 3px;
			background: $color-black;
			overflow-x: auto;
    		overflow-y: hidden;
			code {
				color: $color-code;
				background: none;
			}
		}
		.codebreak {
			margin: 15px;
			border: 0;
			border-bottom: 1px dashed $color-white;
		}
	}
}

.about {
	&__title {
		font-size: 1.6em;
		font-weight: 700;
		margin-top: 20px;
		margin-bottom: 10px;
	}
	&__content {
		margin-top: 20px;
		h1 {
			font-size: 1.2em;
			font-style: italic;
			margin-top: 30px;
			margin-bottom: 5px;
		}
		p {
			font-size: 1em;
			line-height: 150%;
			margin-bottom: 10px;
		}
	}
}

